[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robotframework-appiumlibrary-windows"
version = "0.1.0"
description = "Robot Framework AppiumLibrary extension for Windows desktop automation"
authors = [
  { name = "Huy Nguyen", email = "nguyenvanhuy0612@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "robotframework>=7.2.2",
  "Appium-Python-Client>=5.1.1",
  "decorator>=5.2.1",
  "six>=1.17.0"
]
classifiers = [
  "Framework :: Robot Framework",
  "Framework :: Robot Framework :: Library",
  "Programming Language :: Python :: 3",
  "Operating System :: Microsoft :: Windows",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Testing"
]

[project.urls]
Homepage = "https://github.com/nguyenvanhuy0612/robotframework-appium-windows"
Repository = "https://github.com/nguyenvanhuy0612/robotframework-appium-windows"
Issues = "https://github.com/nguyenvanhuy0612/robotframework-appium-windows/issues"
